# lucy

./: .gitignore
log/: latest_build
lucy/: CMakeLists.txt  cmake.txt  package.xml
lucy/config/: controller_manager_params.yaml  ekf.yaml  ekf_params.yaml  joy_params.yaml  lidar_params.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  slam_toolbox_params.yaml  twist_mux.yaml  twist_mux_params.yaml
lucy/description/: lucy.body.xacro  lucy.control.xacro  lucy.material.xacro  lucy.urdf.xacro
lucy/include/servo/: CMakeCache.txt  Makefile  cmake_install.cmake
lucy/include/servo/examples/SMS_STS/SyncRead/: SyncRead.cpp
lucy/include/servo/examples/SMS_STS/WritePos/: WritePos.cpp
lucy/launch/: ekf.launch.py  imu_odom_pub.launch.py  joystick.launch.py  launch_robot.launch.py  localization_launch.py  lucy.launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  servo_jsp.launch.py  sllidar_c1_launch.py  view_sllidar_c1_launch.py
lucy/src/: dirtgps.cpp  gps_fix_node.cpp  joystick_vibration.cpp  lidar_client.cpp  lidar_node.cpp  my_point_cloud_node.cpp  servo_publisher_node.cpp
pico_hardware/: CMakeLists.txt  README.md  package.xml  robot_hardware.xml
pico_hardware/controllers/: robot_controller_example.yaml
pico_hardware/include/pico_hardware_interface/: arduino_comms.h  config.h  fake_robot.h  pico_hardware_interface.h  wheel.h
pico_hardware/launch/: fake_robot.launch.py  test_robot.launch.py
pico_hardware/log/: latest_build
pico_hardware/src/: arduino_comms.cpp  diff_drive_robot.cpp  fake_robot.cpp  pico_hardware_interface.cpp  wheel.cpp
serial/src/: serial.cc
